@@ -25,7 +25,7 @@ for those people who are interested.
 --]]
 
 -- Version information
-release_date = "2024-01-09"
+release_date = "2024-01-18"
 
 -- File operations are aided by the LuaFileSystem module
 local lfs = require("lfs")
